--- a/argocd-k8s-resources/onepassword/overlays/prod/service.yaml
+++ b/argocd-k8s-resources/onepassword/overlays/prod/service.yaml
@@ -4,8 +4,9 @@ metadata:
   name: onepassword-connect
   namespace: 1password
 spec:
-  ports:
-  - port: 8080
-    targetPort: 8080
   selector:
     app: onepassword-connect
+  ports:
+    - name: connect-api
+      port: 8080
+      targetPort: 8080
