--- a/argocd-k8s-resources/onepassword/overlays/prod/deployment.yaml
+++ b/argocd-k8s-resources/onepassword/overlays/prod/deployment.yaml
@@ -11,39 +11,83 @@ spec:
     metadata:
       labels: { app: onepassword-connect }
     spec:
-      containers:
-        - name: connect-api
-          image: 1password/connect-api:latest
-          ports:
-            - containerPort: 8080
-          env:
-            - name: OP_LOG_LEVEL
-              value: info
-          volumeMounts:
-            - name: data
-              mountPath: /home/opuser/.op/data
-            - name: credentials
-              mountPath: /home/opuser/.op/1password-credentials.json
-              subPath: 1password-credentials.json
-              readOnly: true
-        - name: connect-sync
-          image: 1password/connect-sync:latest
-          env:
-            - name: OP_LOG_LEVEL
-              value: info
-          volumeMounts:
-            - name: data
-              mountPath: /home/opuser/.op/data
-            - name: credentials
-              mountPath: /home/opuser/.op/1password-credentials.json
-              subPath: 1password-credentials.json
-              readOnly: true
       volumes:
         - name: data
           emptyDir: {}
         - name: credentials
           secret:
             secretName: onepassword-credentials
-            items:
-              - key: 1password-credentials.json
-                path: 1password-credentials.json
+      initContainers:
+        - name: sqlite-permissions
+          image: alpine:3.12
+          command:
+            - "/bin/sh"
+            - "-c"
+          args:
+            - "mkdir -p /home/opuser/.op/data && chown -R 999 /home/opuser && chmod -R 700 /home/opuser && chmod -f -R 600 /home/opuser/.op/config || :"
+          volumeMounts:
+            - mountPath: /home/opuser/.op/data
+              name: data
+      containers:
+        - name: connect-api
+          image: 1password/connect-api:latest
+          resources:
+            limits:
+              memory: "128Mi"
+              cpu: "0.2"
+          ports:
+            - name: connect-api
+              containerPort: 8080
+          env:
+            - name: OP_SESSION
+              value: /home/opuser/.config/1password-credentials.json
+          volumeMounts:
+            - mountPath: /home/opuser/.op/data
+              name: shared-data
+            - mountPath: /home/opuser/.config
+              name: credentials
+              readOnly: true
+          livenessProbe:
+            httpGet:
+              path: /heartbeat
+              port: connect-api
+            initialDelaySeconds: 3
+            periodSeconds: 3
+          readinessProbe:
+            httpGet:
+              path: /health
+              port: connect-api
+            initialDelaySeconds: 5
+            periodSeconds: 5
+        - name: connect-sync
+          image: 1password/connect-sync:latest
+          resources:
+            limits:
+              memory: "128Mi"
+              cpu: "0.2"
+          ports:
+            - name: connect-sync
+              containerPort: 8081
+          env:
+            - name: OP_SESSION
+              value: /home/opuser/.config/1password-credentials.json
+            - name: OP_HTTP_PORT
+              value: "8081"
+          volumeMounts:
+            - mountPath: /home/opuser/.op/data
+              name: shared-data
+            - mountPath: /home/opuser/.config
+              name: credentials
+              readOnly: true
+          livenessProbe:
+            httpGet:
+              path: /heartbeat
+              port: connect-sync
+            initialDelaySeconds: 3
+            periodSeconds: 3
+          readinessProbe:
+            httpGet:
+              path: /health
+              port: connect-sync
+            initialDelaySeconds: 5
+            periodSeconds: 5
