--- a/argocd-k8s-resources/onepassword/overlays/prod/deployment.yaml
+++ b/argocd-k8s-resources/onepassword/overlays/prod/deployment.yaml
@@ -13,7 +13,8 @@ spec:
     spec:
       volumes:
         - name: shared-data
-          emptyDir: {}
+          persistentVolumeClaim:
+            claimName: onepassword-connect-pvc
         - name: credentials
           secret:
             secretName: onepassword-credentials
