change vault name

--- a/argocd-k8s-resources/external-secrets/overlays/prod/secretstore.yaml
+++ b/argocd-k8s-resources/external-secrets/overlays/prod/secretstore.yaml
@@ -8,7 +8,7 @@ spec:
     onepassword:
       connectHost: http://onepassword-connect.1password:8080
       vaults:
-        - name: my-vault   # the 1Password vault name
+        - name: ESO
       auth:
         secretRef:
           connectTokenSecretRef:
