--- a/argocd-k8s-resources/external-secrets/overlays/prod/kustomization.yaml
+++ b/argocd-k8s-resources/external-secrets/overlays/prod/kustomization.yaml
@@ -1,6 +1,14 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+namespace: external-secrets
+
 resources:
-  - operator-install.yaml
   - secretstore.yaml
+
+helmCharts:
+- name: external-secrets
+  repo: https://charts.external-secrets.io
+  version: 0.19.2
+  releaseName: external-secrets
+  namespace: external-secrets
