--- a/argocd-k8s-resources/external-secrets/overlays/prod/kustomization.yaml
+++ b/argocd-k8s-resources/external-secrets/overlays/prod/kustomization.yaml
@@ -3,8 +3,8 @@ kind: Kustomization
 
 namespace: external-secrets
 
-resources:
-  - secretstore.yaml
+#resources:
+#  - secretstore.yaml
 
 helmCharts:
 - name: external-secrets
