change creds file to base64

--- a/argocd-k8s-resources/onepassword/overlays/prod/kustomization.yaml
+++ b/argocd-k8s-resources/onepassword/overlays/prod/kustomization.yaml
@@ -15,8 +15,8 @@ helmCharts:
   includeCRDs: true
   valuesInline:
     connect:
-      credentialsName: "onepassword-credentials"
-      credentialsKey: "1password-credentials.json"
+      credentialsName: "op-credentials"
+      credentialsKey: "1pass-creds"
     operator:
       create: true
       token:
