--- a/argocd-k8s-resources/managed-secrets/overlays/prod/clustersecretstore.yaml
+++ b/argocd-k8s-resources/managed-secrets/overlays/prod/clustersecretstore.yaml
@@ -15,7 +15,7 @@
 #            name: prd-access-token
 #            key: credential
 ---
-apiVersion: external-secrets.io/v1beta1
+apiVersion: external-secrets.io/v1
 kind: ClusterSecretStore
 metadata:
   name: onepassword-cluster-store
