--- a/argocd-k8s-resources/managed-secrets/overlays/prod/clustersecretstore.yaml
+++ b/argocd-k8s-resources/managed-secrets/overlays/prod/clustersecretstore.yaml
@@ -24,7 +24,7 @@ spec:
     onepassword:
       connectHost: "http://onepassword-connect:8080"
       vaults:
-        ESO: "ESO"
+        ESO: 1
       auth:
         secretRef:
           connectTokenSecretRef:
