--- a/argocd-k8s-resources/managed-secrets/overlays/prod/clustersecretstore.yaml
+++ b/argocd-k8s-resources/managed-secrets/overlays/prod/clustersecretstore.yaml
@@ -22,12 +22,12 @@ metadata:
 spec:
   provider:
     onepassword:
-      connectHost: "http://onepassword-connect:8080"
+      connectHost: "http://onepassword-connect.1password.svc.cluster.local:8080"
       vaults:
         ESO: 1
       auth:
         secretRef:
           connectTokenSecretRef:
             name: prd-access-token
-            namespace: managed-secrets   # 👈 required because the secret is namespaced
+            namespace: managed-secrets
             key: credential
