remove managed-secrets app and move content to external-secrets

--- a/argocd-k8s-resources/external-secrets/overlays/prod/kustomization.yaml
+++ b/argocd-k8s-resources/external-secrets/overlays/prod/kustomization.yaml
@@ -3,8 +3,9 @@ kind: Kustomization
 
 namespace: external-secrets
 
-#resources:
-#  - secretstore.yaml
+resources:
+- secrets.yaml
+- clustersecretstore.yaml
 
 helmCharts:
 - name: external-secrets
