add pull secret

--- a/argocd-k8s-resources/personal-profile/overlays/prod/secrets.yaml
+++ b/argocd-k8s-resources/personal-profile/overlays/prod/secrets.yaml
@@ -35,3 +35,35 @@ spec:
       remoteRef:
         key: JWT_SECRET
         property: password
+---
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
+metadata:
+  name: ghcr-pull-secret
+  namespace: personal-profile
+spec:
+  refreshInterval: 1h
+  secretStoreRef:
+    name: onepassword-cluster-store
+    kind: ClusterSecretStore
+  target:
+    name: ghcr-pull-secret
+    creationPolicy: Owner
+    template:
+      type: kubernetes.io/dockerconfigjson
+      data:
+        .dockerconfigjson: |
+          {
+            "auths": {
+              "ghcr.io": {
+                "username": "jterpstra1",
+                "password": "{{ .ghcr-pat }}",
+                "auth": "{{ printf \"%s:%s\" \"jterpstra1\" .ghcr-pat | b64enc }}"
+              }
+            }
+          }
+  data:
+    - secretKey: ghcr-pat
+      remoteRef:
+        key: ghcr-pat
+        property: ghcr-pat
