--- a/argocd-k8s-resources/personal-profile/overlays/prod/secrets.yaml
+++ b/argocd-k8s-resources/personal-profile/overlays/prod/secrets.yaml
@@ -36,7 +36,7 @@ spec:
         key: JWT_SECRET
         property: password
 ---
-apiVersion: external-secrets.io/v1beta1
+apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
   name: ghcr-pull-secret
