update  pull secret

--- a/argocd-k8s-resources/personal-profile/overlays/prod/secrets.yaml
+++ b/argocd-k8s-resources/personal-profile/overlays/prod/secrets.yaml
@@ -53,17 +53,17 @@ spec:
       type: kubernetes.io/dockerconfigjson
       data:
         .dockerconfigjson: |
-          '{
+          {
             "auths": {
               "ghcr.io": {
                 "username": "jterpstra1",
-                "password": "{{ .ghcr-pat }}",
-                "auth": "{{ printf \"%s:%s\" \"jterpstra1\" .ghcr-pat | b64enc }}"
+                "password": "{{ .ghcr_pat }}",
+                "auth": "{{ printf "%s:%s" "jterpstra1" .ghcr_pat | b64enc }}"
               }
             }
-          }'
+          }
   data:
-    - secretKey: ghcr-pat
+    - secretKey: ghcr_pat
       remoteRef:
         key: ghcr-pat
         property: ghcr-pat
