--- a/argocd-k8s-resources/personal-profile/overlays/prod/ingress.yaml
+++ b/argocd-k8s-resources/personal-profile/overlays/prod/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: vdgtconsultancy.be
+    - host: www.vdgtconsultancy.be
       http:
         paths:
           - path: /
