--- a/argocd-k8s-resources/personal-profile/overlays/prod/ingress.yaml
+++ b/argocd-k8s-resources/personal-profile/overlays/prod/ingress.yaml
@@ -5,6 +5,16 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
+    - host: vdgtconsultancy.be
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: portfolio-frontend
+                port:
+                  number: 80
     - host: www.vdgtconsultancy.be
       http:
         paths:
