add names to DNS service ports in service-dns.yaml

--- a/argocd-k8s-resources/adguard/base/service-dns.yaml
+++ b/argocd-k8s-resources/adguard/base/service-dns.yaml
@@ -7,10 +7,12 @@ metadata:
 spec:
   type: LoadBalancer
   ports:
-    - port: 53
+    - name: dns-udp
+      port: 53
       protocol: UDP
       targetPort: 53
-    - port: 53
+    - name: dns-tcp
+      port: 53
       protocol: TCP
       targetPort: 53
   selector:
