update kustomization.yaml to remove pvc.yaml and add pv.yaml

--- a/argocd-k8s-resources/adguard/base/kustomization.yaml
+++ b/argocd-k8s-resources/adguard/base/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 
 resources:
   - deployment.yaml
-  - pvc.yaml
   - service-dns.yaml
   - service-ui.yaml
   - configmap.yaml
+  - pv.yaml
