update README and configuration files for adguard and inventory changes

--- a/argocd-k8s-resources/adguard/overlays/prod-a/pvc.yaml
+++ b/argocd-k8s-resources/adguard/overlays/prod-a/pvc.yaml
@@ -3,6 +3,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: adguard-config-a
 spec:
+  storageClassName: ""   # must match PV
   accessModes:
     - ReadWriteOnce
   resources:
