--- a/argocd-k8s-resources/adguard/base/pv.yaml
+++ b/argocd-k8s-resources/adguard/base/pv.yaml
@@ -3,6 +3,7 @@ kind: PersistentVolume
 metadata:
   name: pv-adguard
 spec:
+  storageClassName: ""   # disable dynamic provisioning
   capacity:
     storage: 1Gi
   accessModes:
@@ -10,4 +11,4 @@ spec:
   persistentVolumeReclaimPolicy: Retain
   nfs:
     server: 192.168.1.230
-    path: /srv/nfs/adguard
+    path: /srv/nfs/adguard   # will be patched in overlays
