--- a/argocd-k8s-resources/adguard/overlays/prod-a/pvc.yaml
+++ b/argocd-k8s-resources/adguard/overlays/prod-a/pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: adguard-config-a
+  name: adguard-config
 spec:
   storageClassName: ""   # must match PV
   accessModes:
