add ingressClassName for adguard-ui in ingress.yaml

--- a/argocd-k8s-resources/adguard/overlays/prod-b/ingress.yaml
+++ b/argocd-k8s-resources/adguard/overlays/prod-b/ingress.yaml
@@ -3,6 +3,7 @@ kind: Ingress
 metadata:
   name: adguard-ui
 spec:
+  ingressClassName: nginx
   rules:
     - host: adguard-b.terpstra.tech
       http:
