--- a/argocd-k8s-resources/adguard/overlays/prod-a/ingress.yaml
+++ b/argocd-k8s-resources/adguard/overlays/prod-a/ingress.yaml
@@ -15,3 +15,13 @@ spec:
                 name: adguard-ui-a
                 port:
                   number: 3000
+    - host: adguard.local
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: adguard-ui-a
+                port:
+                  number: 3000
