remove host definition from ingress configuration for adguard-ui

--- a/argocd-k8s-resources/adguard/overlays/prod-a/ingress.yaml
+++ b/argocd-k8s-resources/adguard/overlays/prod-a/ingress.yaml
@@ -15,8 +15,7 @@ spec:
                 name: adguard-ui-a
                 port:
                   number: 3000
-    - host: adguard.local
-      http:
+    - http:
         paths:
           - path: /
             pathType: Prefix
