update ingress and service configurations to expose admin UI with loadBalancerIP

--- a/argocd-k8s-resources/adguard/base/service-dns.yaml
+++ b/argocd-k8s-resources/adguard/base/service-dns.yaml
@@ -6,6 +6,7 @@ metadata:
     app: adguard
 spec:
   type: LoadBalancer
+  loadBalancerIP: TO_OVERLAY
   ports:
     - name: dns-udp
       port: 53
