update kustomization and service files to include shared-ip annotations for adguard services

--- a/argocd-k8s-resources/adguard/base/service-ui.yaml
+++ b/argocd-k8s-resources/adguard/base/service-ui.yaml
@@ -4,6 +4,8 @@ metadata:
   name: adguard-ui
   labels:
     app: adguard
+  annotations:
+    metallb.universe.tf/allow-shared-ip: TO_OVERLAY
 spec:
   type: LoadBalancer
   loadBalancerIP: TO_OVERLAY
