--- a/argocd-k8s-resources/adguard/base/service-dns.yaml
+++ b/argocd-k8s-resources/adguard/base/service-dns.yaml
@@ -4,6 +4,8 @@ metadata:
   name: adguard-dns
   labels:
     app: adguard
+  annotations:
+    metallb.universe.tf/allow-shared-ip: TO_OVERLAY
 spec:
   type: LoadBalancer
   loadBalancerIP: TO_OVERLAY
