--- a/argocd-k8s-resources/adguard/overlays/prod-a/kustomization.yaml
+++ b/argocd-k8s-resources/adguard/overlays/prod-a/kustomization.yaml
@@ -18,7 +18,7 @@ patches:
         path: /spec/loadBalancerIP
         value: 192.168.1.53
       - op: replace
-        path: /metadata/annotations/metallb.universe.tf~1allow-shared-ip
+        path: /metadata/annotations/metallb.io~1allow-shared-ip
         value: adguard-a
   # Assign shared-ip annotation and LoadBalancer IP for UI
   - target:
@@ -29,7 +29,7 @@ patches:
         path: /spec/loadBalancerIP
         value: 192.168.1.53
       - op: replace
-        path: /metadata/annotations/metallb.universe.tf~1allow-shared-ip
+        path: /metadata/annotations/metallb.io~1allow-shared-ip
         value: adguard-a
   - target:
       kind: PersistentVolume
