remove configmap from kustomization.yaml and set externalTrafficPolicy to Local in service-dns.yaml

--- a/argocd-k8s-resources/adguard/base/service-dns.yaml
+++ b/argocd-k8s-resources/adguard/base/service-dns.yaml
@@ -9,6 +9,7 @@ metadata:
 spec:
   type: LoadBalancer
   loadBalancerIP: TO_OVERLAY
+  externalTrafficPolicy: Local
   ports:
     - name: dns-udp
       port: 53
